# bayesian-statistics

./: .gitignore  README.md  pyproject.toml
approximate_inference/: README.md  variational_inference.ipynb
approximate_inference/notebooks/: gibbs_sampling.ipynb  poisson_mixture_model_gs.ipynb  poisson_mixture_model_vi.ipynb
bayesian_position_estimation/: .gitignore  README.md  main.ipynb  pyproject.toml
bayesinan_methods_for_hackers/: README.md
bayesinan_methods_for_hackers/chapter1/: chapter1.ipynb
bayesinan_methods_for_hackers/chapter2/: chapter2.ipynb
bayesinan_methods_for_hackers/chapter3/: chapter3.ipynb
bayesinan_methods_for_hackers/chapter4/: chapter4.ipynb  reddit.py
bayesinan_methods_for_hackers/chapter5/: chapter5.ipynb
bayesinan_methods_for_hackers/chapter6/: chapter6.ipynb
pymc3/: README.md
pymc3/notebooks/: hierarchical_model.ipynb  state_space.ipynb
pymc3/notebooks/data/: soccer.csv
