[tool.poetry]
name = "bayes"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.2"
jupyter = "^1.0.0"
jupyterlab = "^3.0.7"
ipython = "^7.20.0"
tqdm = "^4.56.2"
seaborn = "^0.11.1"
matplotlib = "^3.3.4"
scipy = "^1.6.0"
pymc3 = "^3.11.1"
arviz = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
