[tool.poetry]
name = "bpe"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
jupyter = "^1.0.0"
ipython = "^7.19.0"
jupyterlab = "^2.2.9"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
pymc3 = "^3.9.3"
theano = "^1.0.5"
funsor = "^0.3.0"
numpyro = "^0.4.1"
opencv-python = "^4.4.0"
arviz = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
